--- a/ticTacToe.css
+++ b/ticTacToe.css
@@ -1,8 +1,38 @@
+body {
+	background-color: #76D7C4;
+}
+
+table {
+	margin: 40px auto;
+	
+}
 td {
-border: 1px solid black;
-height: 50px;
-width: 50px;
-color: red;
+border: solid 1px #138D75;
+border-radius: 5px;
+height: 100px;
+width: 100px;
+padding: 2px;
+font: bold 75px Lato;
+color: #138D75;
 text-align: center;
 cursor: pointer;
+}
+
+#title {
+	font: bold 100px Lato;
+	color: #138D75;
+	text-align: center;
+}
+
+button{
+	margin:auto;
+  	display:block;
+  	padding: 10px;
+	border: solid 1px #138D75;
+	border-radius: 5px;
+	background-color: #138D75;
+	font: bold 30px Lato;
+	color: #76D7C4;
+	text-align: center;
+	cursor: pointer;
 }
